--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-work",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "file-loader": "^6.2.0",
+    "css-loader": "^5.0.1",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-css-modules": "^4.7.11",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
+    "style-loader": "^2.0.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
